examples/test/testpolicy11018.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11018
  namespace: namespace182
spec:
  podSelector:
    matchLabels:
      key11: value28
      key36: value8
      key16: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value12
          key2: value25
          key32: value31
